# sa2-auto-backup

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.sh  release.sh
AutoBackup/: README.md  configschema.xml  mod.ini
mod/: mod.ini
src/: CMakeLists.txt  config.cpp  config.h  debug.cpp  debug.h  dllmain.cpp  main.cpp  pch.h  saves.cpp  saves.h
